[gd_scene load_steps=5 format=2]

[ext_resource path="res://RainIsoMainContents/Resources/NewsPaperStand.png" type="Texture" id=1]
[ext_resource path="res://RainIsoMainContents/Scenes/DailyNews.tscn" type="PackedScene" id=2]
[ext_resource path="res://RainIsoMainContents/Scenes/MelodyTownNewspaperStand.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 80, 64 )

[node name="MelodyTownNewspaperStand" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4.76837e-07, 0 )
scale = Vector2( 3.75, 4 )
z_index = -1
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="DailyNews" parent="." instance=ExtResource( 2 )]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D" to="DailyNews" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_exited" from="Area2D" to="DailyNews" method="_on_Area2D_body_exited"]
